--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       scroll-behavior: smooth;
     }
     body { overflow-x: hidden; }
-
     #background-canvas {
       position: fixed;
       top: 0; left: 0; width: 100vw; height: 100vh;
@@ -38,8 +37,6 @@
       flex-direction: column;
       align-items: center;
     }
-
-    /* ==== HERO ==== */
     .hero-section {
       background: linear-gradient(120deg, #1e3c72 0%, #2a5298 60%, #39c6e7 100%);
       border-bottom-left-radius: 18px;
@@ -91,7 +88,6 @@
     .cta-btn:focus, .cta-btn:active { outline:2px solid #ffe066; outline-offset:2px;}
     .cta-btn:hover { background: #39c6e7; color: #fff; }
 
-    /* ==== SECTION ==== */
     .container-section {
       margin: 0 auto;
       margin-bottom: 1rem;
@@ -132,7 +128,6 @@
     .aud-card .icon { font-size:1.13rem; color:#ffe066;}
     .why-card p, .how-step .step-desc, .aud-card { color:#c9e5ff; font-size:0.97rem; text-align: center;}
 
-    /* FLEXIBLE LEARNING OPTIONS (NEW SECTION) */
     .flexible-options-section {
       background: #fff;
       padding: 2.1rem 0.7rem 1.2rem 0.7rem;
@@ -275,23 +270,35 @@
       .flexible-options-cards {
         flex-direction: row;
         gap: 1.5rem;
-        align-items: stretch;
+        align-items: flex-start;
+        justify-content: center;
+        width: 100%;
       }
-      .flexible-options-card { max-width: 340px; }
-      .page-center { max-width: 1100px; }
+      .flexible-options-card { 
+        max-width: 320px;
+        min-width: 270px;
+        margin: 0 0.5rem;
+      }
     }
     @media (max-width: 700px) {
       .flexible-options-section { max-width: 99vw; }
+      .flexible-options-cards { flex-direction: column; }
       .flexible-options-card { max-width: 99vw; }
     }
-    /* fade in effect for section (optional) */
+    @media (max-width: 500px) {
+      .page-center, .vision-section, .beta-notice, .flexible-options-section {
+        padding-left: 2vw;
+        padding-right: 2vw;
+      }
+      .flexible-options-card { padding-left: 0.7rem; padding-right: 0.7rem; }
+      .signup-form-box { padding-left: 0.7rem; padding-right: 0.7rem; }
+    }
     @keyframes fadeInUp {
       0% { opacity:0; transform:translateY(40px);}
       100% { opacity:1; transform:translateY(0);}
     }
     .fade-in.visible { opacity: 1 !important; transform: translateY(0) !important; }
 
-    /* ==== VISION & BETA ==== */
     .vision-section, .beta-notice {
       background: linear-gradient(120deg,#15263d 60%,#233a59 100%);
       border-radius:10px; box-shadow:0 4px 16px #39c6e73a;
@@ -303,7 +310,7 @@
     .vision-section .mission-title { color: #39c6e7; font-size:1.07rem; font-weight:600; margin-top:1.1rem; margin-bottom:0.5rem;}
     .beta-notice { background:linear-gradient(90deg,#ffe066 10%,#39c6e7 100%); color:#232d3a; font-size:1.01rem;}
 
-    /* ==== FORM ==== */
+    /* ---- MULTISELECT DROPDOWN ---- */
     .signup-form-box {
       background: #19243a; border-radius: 10px; box-shadow: 0 2px 8px rgba(44,153,255,0.13);
       padding: 1.2rem 0.7rem; max-width:370px; width:100%; margin: 0 auto 1.2rem auto;
@@ -328,6 +335,7 @@
     .signup-form .btn:active { outline:2px solid #ffe066; outline-offset:2px;}
     .signup-form .btn:hover,
     .signup-form .btn:active { background:#ffe066; color:#39c6e7; transform:scale(1.03); }
+
     .dropdown-multiselect { position:relative; user-select:none; margin-bottom:0.39rem; width:100%;}
     .dropdown-multiselect .dropdown-header {
       padding:0.6rem 0.7rem; background:#132345; border:1.2px solid #39c6e7bb;
@@ -339,27 +347,77 @@
       border:1.8px solid #ffe066; background:#1c3258; box-shadow:0 2px 12px #ffe06633; outline:none;
     }
     .dropdown-multiselect .dropdown-list {
-      position:absolute; top:110%; left:0; width:100vw; max-width:370px;
-      background:#1c3258; border-radius:8px; box-shadow:0 4px 10px #2a529866;
-      z-index:4; max-height:130px; overflow-y:auto; margin-top:2px; animation:fadeInUp .22s both;
-      box-sizing:border-box;
+      position: absolute;
+      left: 0;
+      top: 105%;
+      width: 100%;
+      min-width: 220px;
+      background: #19243a;
+      border-radius: 10px;
+      box-shadow: 0 8px 24px #2a529855;
+      z-index: 99;
+      max-height: 240px;
+      overflow-y: auto;
+      margin-top: 3px;
+      padding: 0.5rem 0;
+      animation: fadeInUp .22s both;
+      box-sizing: border-box;
+      display: none;
     }
+    .dropdown-multiselect.open .dropdown-list { display: block; }
     .dropdown-multiselect .dropdown-list label {
-      display:flex; align-items:center; padding:0.28rem 0.7rem; color:#fff; font-size:0.96rem;
-      cursor:pointer; transition:background .13s; margin:0;
+      display: flex;
+      align-items: center;
+      padding: 0.42rem 1rem 0.42rem 0.95rem;
+      color: #fff;
+      font-size: 0.99rem;
+      cursor: pointer;
+      transition: background .13s;
+      margin: 0;
+      border-bottom: 1px solid #233a5940;
     }
-    .dropdown-multiselect .dropdown-list label:hover { background:#233a59;}
+    .dropdown-multiselect .dropdown-list label:last-child {
+      border-bottom: none;
+    }
+    .dropdown-multiselect .dropdown-list label:hover {
+      background: #233a59;
+    }
     .dropdown-multiselect .dropdown-list input[type="checkbox"] {
-      margin-right:0.7em; accent-color:var(--accent); transform:scale(1.08);
+      margin-right: 0.7em;
+      accent-color: var(--accent);
+      transform: scale(1.13);
     }
     .dropdown-multiselect .selected-options {
-      display:inline; color:#ffe066; font-size:0.97rem; font-weight:500;
-      max-width:65vw; overflow-x:auto; white-space:nowrap;
+      display: inline;
+      color: #ffe066;
+      font-size: 1.02rem;
+      font-weight: 500;
+      max-width: 76vw;
+      overflow-x: auto;
+      white-space: nowrap;
     }
-    .dropdown-multiselect .dropdown-arrow { font-size:1em; margin-left:0.4em; color:#ffe066; }
-    .dropdown-multiselect.open .dropdown-arrow { transform:rotate(-180deg);}
+    .dropdown-multiselect .dropdown-arrow {
+      font-size: 1.1em;
+      margin-left: 0.5em;
+      color: #ffe066;
+      transition: transform .18s;
+    }
+    .dropdown-multiselect.open .dropdown-arrow {
+      transform: rotate(-180deg);
+    }
 
-    /* ==== FOOTER ==== */
+    @media (max-width: 500px) {
+      .dropdown-multiselect .dropdown-list {
+        min-width: 0;
+        width: 98vw;
+        left: -6vw;
+        font-size: 0.98rem;
+      }
+      .dropdown-multiselect .dropdown-header {
+        font-size: 0.98rem;
+      }
+    }
+
     .footer {
       background: linear-gradient(120deg, #1e3c72 0%, #2a5298 60%, #39c6e7 100%);
       color:#fff; padding:1.1rem 0.5rem 0.7rem 0.5rem;
@@ -509,7 +567,7 @@
             <span class="selected-options" id="teach-selected">Select skills</span>
             <span class="dropdown-arrow"><i class="fa-solid fa-chevron-down"></i></span>
           </div>
-          <div class="dropdown-list" style="display:none;">
+          <div class="dropdown-list">
             <label><input type="checkbox" value="English Speaking"/> English Speaking</label>
             <label><input type="checkbox" value="Digital Marketing"/> Digital Marketing</label>
             <label><input type="checkbox" value="Yoga"/> Yoga</label>
@@ -534,7 +592,7 @@
             <span class="selected-options" id="learn-selected">Select skills</span>
             <span class="dropdown-arrow"><i class="fa-solid fa-chevron-down"></i></span>
           </div>
-          <div class="dropdown-list" style="display:none;">
+          <div class="dropdown-list">
             <label><input type="checkbox" value="English Speaking"/> English Speaking</label>
             <label><input type="checkbox" value="Digital Marketing"/> Digital Marketing</label>
             <label><input type="checkbox" value="Yoga"/> Yoga</label>
@@ -573,7 +631,6 @@
   </div>
 </section>
 
-<!-- FOOTER -->
 <footer class="footer">
   <div class="footer-inner">
     <span class="footer-brand">SwapEra</span>
@@ -672,13 +729,11 @@
     header.addEventListener('click', function(e) {
       e.stopPropagation();
       dropdown.classList.toggle('open');
-      list.style.display = dropdown.classList.contains('open') ? 'block' : 'none';
     });
     header.addEventListener('keydown', function(e) {
       if (e.key === " " || e.key === "Enter" || e.key === "ArrowDown") {
         e.preventDefault();
         dropdown.classList.toggle('open');
-        list.style.display = dropdown.classList.contains('open') ? 'block' : 'none';
         if (dropdown.classList.contains('open')) {
           list.querySelector('label input').focus();
         }
@@ -690,7 +745,6 @@
     document.addEventListener('click', function(e){
       if (!dropdown.contains(e.target)) {
         dropdown.classList.remove('open');
-        list.style.display = "none";
       }
     });
     updateSelected();
