--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
       position: fixed;
       top: 0; left: 0; width: 100vw; height: 100vh;
       z-index: 0; pointer-events: none;
-      max-width: 100vw !important; max-height: 100vh !important;
     }
-
     .page-center {
       width: 100%;
       max-width: 440px;
@@ -47,10 +45,10 @@
       margin-bottom: 0.6rem;
       position: relative;
       z-index: 2;
-      animation: gradientBG 12s ease-in-out infinite alternate;
       display: flex;
       justify-content: center;
       align-items: center;
+      animation: gradientBG 12s ease-in-out infinite alternate;
     }
     @keyframes gradientBG {
       0% { background-position: 0% 50%; }
@@ -71,7 +69,6 @@
       -webkit-background-clip: text; background-clip: text; color: transparent; -webkit-text-fill-color: transparent;
       margin-bottom:0.35rem; margin-top:0;
       text-shadow: 0 2px 20px #0003;
-      text-align: center;
       width: 100%;
       display: block;
     }
@@ -128,6 +125,7 @@
     .aud-card .icon { font-size:1.13rem; color:#ffe066;}
     .why-card p, .how-step .step-desc, .aud-card { color:#c9e5ff; font-size:0.97rem; text-align: center;}
 
+    /* FLEXIBLE LEARNING OPTIONS (NEW SECTION) */
     .flexible-options-section {
       background: #fff;
       padding: 2.1rem 0.7rem 1.2rem 0.7rem;
@@ -336,11 +334,15 @@
     .signup-form .btn:hover,
     .signup-form .btn:active { background:#ffe066; color:#39c6e7; transform:scale(1.03); }
 
-    .dropdown-multiselect { position:relative; user-select:none; margin-bottom:0.39rem; width:100%;}
+    .dropdown-multiselect { position:relative; user-select:none; margin-bottom:0.39rem; width:100%; max-width: 100%;}
     .dropdown-multiselect .dropdown-header {
       padding:0.6rem 0.7rem; background:#132345; border:1.2px solid #39c6e7bb;
       border-radius:8px; color:#fff; cursor:pointer; font-size:0.97rem;
       display:flex; align-items:center; justify-content:space-between; width:100%; box-sizing:border-box;
+      min-height: 44px;
+      overflow-x: auto;
+      white-space: normal;
+      flex-wrap: wrap;
     }
     .dropdown-multiselect.open .dropdown-header,
     .dropdown-multiselect .dropdown-header:focus {
@@ -351,12 +353,12 @@
       left: 0;
       top: 105%;
       width: 100%;
-      min-width: 220px;
+      min-width: 200px;
       background: #19243a;
       border-radius: 10px;
       box-shadow: 0 8px 24px #2a529855;
       z-index: 99;
-      max-height: 240px;
+      max-height: 220px;
       overflow-y: auto;
       margin-top: 3px;
       padding: 0.5rem 0;
@@ -375,6 +377,7 @@
       transition: background .13s;
       margin: 0;
       border-bottom: 1px solid #233a5940;
+      word-break: break-word;
     }
     .dropdown-multiselect .dropdown-list label:last-child {
       border-bottom: none;
@@ -392,15 +395,17 @@
       color: #ffe066;
       font-size: 1.02rem;
       font-weight: 500;
-      max-width: 76vw;
+      max-width: 80vw;
       overflow-x: auto;
-      white-space: nowrap;
+      white-space: normal;
+      word-break: break-word;
     }
     .dropdown-multiselect .dropdown-arrow {
       font-size: 1.1em;
       margin-left: 0.5em;
       color: #ffe066;
       transition: transform .18s;
+      flex-shrink: 0;
     }
     .dropdown-multiselect.open .dropdown-arrow {
       transform: rotate(-180deg);
@@ -409,12 +414,19 @@
     @media (max-width: 500px) {
       .dropdown-multiselect .dropdown-list {
         min-width: 0;
-        width: 98vw;
-        left: -6vw;
+        width: 92vw;
+        left: 50%;
+        transform: translateX(-50%);
         font-size: 0.98rem;
+        padding-left: 0;
+        padding-right: 0;
       }
       .dropdown-multiselect .dropdown-header {
         font-size: 0.98rem;
+        max-width: 98vw;
+      }
+      .dropdown-multiselect .selected-options {
+        max-width: 68vw;
       }
     }
 
