--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
       scroll-behavior: smooth;
     }
     body { overflow-x: hidden; }
+
     #background-canvas {
       position: fixed;
       top: 0; left: 0; width: 100vw; height: 100vh;
       z-index: 0; pointer-events: none;
+      max-width: 100vw !important; max-height: 100vh !important;
     }
+
     .page-center {
       width: 100%;
       max-width: 440px;
@@ -35,6 +38,7 @@
       flex-direction: column;
       align-items: center;
     }
+
     .hero-section {
       background: linear-gradient(120deg, #1e3c72 0%, #2a5298 60%, #39c6e7 100%);
       border-bottom-left-radius: 18px;
@@ -45,10 +49,10 @@
       margin-bottom: 0.6rem;
       position: relative;
       z-index: 2;
+      animation: gradientBG 12s ease-in-out infinite alternate;
       display: flex;
       justify-content: center;
       align-items: center;
-      animation: gradientBG 12s ease-in-out infinite alternate;
     }
     @keyframes gradientBG {
       0% { background-position: 0% 50%; }
@@ -69,6 +73,7 @@
       -webkit-background-clip: text; background-clip: text; color: transparent; -webkit-text-fill-color: transparent;
       margin-bottom:0.35rem; margin-top:0;
       text-shadow: 0 2px 20px #0003;
+      text-align: center;
       width: 100%;
       display: block;
     }
@@ -165,7 +170,7 @@
       padding: 1.15rem 1.1rem 1.35rem 1.1rem;
       max-width: 340px;
       width: 100%;
-      min-width: unset;
+      min-width: 0;
       margin: 0 auto;
       display: flex;
       flex-direction: column;
@@ -272,16 +277,23 @@
         justify-content: center;
         width: 100%;
       }
-      .flexible-options-card { 
+      .flexible-options-card {
         max-width: 320px;
         min-width: 270px;
-        margin: 0 0.5rem;
+        margin-left: auto;
+        margin-right: auto;
       }
     }
-    @media (max-width: 700px) {
-      .flexible-options-section { max-width: 99vw; }
-      .flexible-options-cards { flex-direction: column; }
-      .flexible-options-card { max-width: 99vw; }
+    @media (max-width: 900px) {
+      .flexible-options-cards {
+        flex-direction: column;
+        align-items: center;
+      }
+      .flexible-options-card {
+        max-width: 99vw;
+        margin-left: auto;
+        margin-right: auto;
+      }
     }
     @media (max-width: 500px) {
       .page-center, .vision-section, .beta-notice, .flexible-options-section {
@@ -308,7 +320,6 @@
     .vision-section .mission-title { color: #39c6e7; font-size:1.07rem; font-weight:600; margin-top:1.1rem; margin-bottom:0.5rem;}
     .beta-notice { background:linear-gradient(90deg,#ffe066 10%,#39c6e7 100%); color:#232d3a; font-size:1.01rem;}
 
-    /* ---- MULTISELECT DROPDOWN ---- */
     .signup-form-box {
       background: #19243a; border-radius: 10px; box-shadow: 0 2px 8px rgba(44,153,255,0.13);
       padding: 1.2rem 0.7rem; max-width:370px; width:100%; margin: 0 auto 1.2rem auto;
@@ -333,102 +344,36 @@
     .signup-form .btn:active { outline:2px solid #ffe066; outline-offset:2px;}
     .signup-form .btn:hover,
     .signup-form .btn:active { background:#ffe066; color:#39c6e7; transform:scale(1.03); }
-
-    .dropdown-multiselect { position:relative; user-select:none; margin-bottom:0.39rem; width:100%; max-width: 100%;}
+    .dropdown-multiselect { position:relative; user-select:none; margin-bottom:0.39rem; width:100%;}
     .dropdown-multiselect .dropdown-header {
       padding:0.6rem 0.7rem; background:#132345; border:1.2px solid #39c6e7bb;
       border-radius:8px; color:#fff; cursor:pointer; font-size:0.97rem;
       display:flex; align-items:center; justify-content:space-between; width:100%; box-sizing:border-box;
-      min-height: 44px;
-      overflow-x: auto;
-      white-space: normal;
-      flex-wrap: wrap;
     }
     .dropdown-multiselect.open .dropdown-header,
     .dropdown-multiselect .dropdown-header:focus {
       border:1.8px solid #ffe066; background:#1c3258; box-shadow:0 2px 12px #ffe06633; outline:none;
     }
     .dropdown-multiselect .dropdown-list {
-      position: absolute;
-      left: 0;
-      top: 105%;
-      width: 100%;
-      min-width: 200px;
-      background: #19243a;
-      border-radius: 10px;
-      box-shadow: 0 8px 24px #2a529855;
-      z-index: 99;
-      max-height: 220px;
-      overflow-y: auto;
-      margin-top: 3px;
-      padding: 0.5rem 0;
-      animation: fadeInUp .22s both;
-      box-sizing: border-box;
-      display: none;
+      position:absolute; top:110%; left:0; width:100vw; max-width:370px;
+      background:#1c3258; border-radius:8px; box-shadow:0 4px 10px #2a529866;
+      z-index:4; max-height:130px; overflow-y:auto; margin-top:2px; animation:fadeInUp .22s both;
+      box-sizing:border-box;
     }
-    .dropdown-multiselect.open .dropdown-list { display: block; }
     .dropdown-multiselect .dropdown-list label {
-      display: flex;
-      align-items: center;
-      padding: 0.42rem 1rem 0.42rem 0.95rem;
-      color: #fff;
-      font-size: 0.99rem;
-      cursor: pointer;
-      transition: background .13s;
-      margin: 0;
-      border-bottom: 1px solid #233a5940;
-      word-break: break-word;
+      display:flex; align-items:center; padding:0.28rem 0.7rem; color:#fff; font-size:0.96rem;
+      cursor:pointer; transition:background .13s; margin:0;
     }
-    .dropdown-multiselect .dropdown-list label:last-child {
-      border-bottom: none;
-    }
-    .dropdown-multiselect .dropdown-list label:hover {
-      background: #233a59;
-    }
+    .dropdown-multiselect .dropdown-list label:hover { background:#233a59;}
     .dropdown-multiselect .dropdown-list input[type="checkbox"] {
-      margin-right: 0.7em;
-      accent-color: var(--accent);
-      transform: scale(1.13);
+      margin-right:0.7em; accent-color:var(--accent); transform:scale(1.08);
     }
     .dropdown-multiselect .selected-options {
-      display: inline;
-      color: #ffe066;
-      font-size: 1.02rem;
-      font-weight: 500;
-      max-width: 80vw;
-      overflow-x: auto;
-      white-space: normal;
-      word-break: break-word;
+      display:inline; color:#ffe066; font-size:0.97rem; font-weight:500;
+      max-width:65vw; overflow-x:auto; white-space:nowrap;
     }
-    .dropdown-multiselect .dropdown-arrow {
-      font-size: 1.1em;
-      margin-left: 0.5em;
-      color: #ffe066;
-      transition: transform .18s;
-      flex-shrink: 0;
-    }
-    .dropdown-multiselect.open .dropdown-arrow {
-      transform: rotate(-180deg);
-    }
-
-    @media (max-width: 500px) {
-      .dropdown-multiselect .dropdown-list {
-        min-width: 0;
-        width: 92vw;
-        left: 50%;
-        transform: translateX(-50%);
-        font-size: 0.98rem;
-        padding-left: 0;
-        padding-right: 0;
-      }
-      .dropdown-multiselect .dropdown-header {
-        font-size: 0.98rem;
-        max-width: 98vw;
-      }
-      .dropdown-multiselect .selected-options {
-        max-width: 68vw;
-      }
-    }
+    .dropdown-multiselect .dropdown-arrow { font-size:1em; margin-left:0.4em; color:#ffe066; }
+    .dropdown-multiselect.open .dropdown-arrow { transform:rotate(-180deg);}
 
     .footer {
       background: linear-gradient(120deg, #1e3c72 0%, #2a5298 60%, #39c6e7 100%);
@@ -579,7 +524,7 @@
             <span class="selected-options" id="teach-selected">Select skills</span>
             <span class="dropdown-arrow"><i class="fa-solid fa-chevron-down"></i></span>
           </div>
-          <div class="dropdown-list">
+          <div class="dropdown-list" style="display:none;">
             <label><input type="checkbox" value="English Speaking"/> English Speaking</label>
             <label><input type="checkbox" value="Digital Marketing"/> Digital Marketing</label>
             <label><input type="checkbox" value="Yoga"/> Yoga</label>
@@ -604,7 +549,7 @@
             <span class="selected-options" id="learn-selected">Select skills</span>
             <span class="dropdown-arrow"><i class="fa-solid fa-chevron-down"></i></span>
           </div>
-          <div class="dropdown-list">
+          <div class="dropdown-list" style="display:none;">
             <label><input type="checkbox" value="English Speaking"/> English Speaking</label>
             <label><input type="checkbox" value="Digital Marketing"/> Digital Marketing</label>
             <label><input type="checkbox" value="Yoga"/> Yoga</label>
@@ -741,11 +686,13 @@
     header.addEventListener('click', function(e) {
       e.stopPropagation();
       dropdown.classList.toggle('open');
+      list.style.display = dropdown.classList.contains('open') ? 'block' : 'none';
     });
     header.addEventListener('keydown', function(e) {
       if (e.key === " " || e.key === "Enter" || e.key === "ArrowDown") {
         e.preventDefault();
         dropdown.classList.toggle('open');
+        list.style.display = dropdown.classList.contains('open') ? 'block' : 'none';
         if (dropdown.classList.contains('open')) {
           list.querySelector('label input').focus();
         }
@@ -757,6 +704,7 @@
     document.addEventListener('click', function(e){
       if (!dropdown.contains(e.target)) {
         dropdown.classList.remove('open');
+        list.style.display = "none";
       }
     });
     updateSelected();
