--- a/index.html
+++ b/index.html
@@ -146,20 +146,20 @@
              <div class="absolute inset-x-0 top-0 h-96 bg-gradient-to-b from-slate-900/10 to-transparent"></div>
             <div class="container mx-auto px-4 text-center relative z-10">
                 <h1 class="text-4xl md:text-6xl font-extrabold text-white leading-tight mb-4">
-                    Swap a Skill, <span class="celestial-gradient-text">Gain a Future.</span> For Free.
+                    SwapEra: <span class="celestial-gradient-text">A New Era of Learning is Coming</span>
                 </h1>
                 <p class="text-lg md:text-xl text-gray-300 max-w-3xl mx-auto mb-8">
                     India's first skill-swapping community. Teach what you know, learn what you want. Your knowledge is your only currency.
                 </p>
                 <div class="flex justify-center items-center gap-4 flex-wrap">
                     <a href="#marketplace" class="px-8 py-4 rounded-full celestial-gradient text-slate-900 text-lg font-bold shadow-lg shadow-amber-500/20 transform hover:scale-105 transition-transform duration-300">
-                        Find Your First Swap
+                        Explore Skills
                     </a>
                 </div>
                 <div class="mt-16 flex justify-center space-x-12 text-gray-300">
                     <div class="text-center">
                         <p class="text-3xl font-bold celestial-gradient-text">10,000+</p>
-                        <p>Active Swappers</p>
+                        <p>Waitlist Signups</p>
                     </div>
                     <div class="text-center">
                         <p class="text-3xl font-bold celestial-gradient-text">500+</p>
